--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.20'
+    ext.kotlin_version = '1.3.21'
+    ext.lifecycle_version = '2.0.0'
+    ext.room_version = '2.0.0'
+
     repositories {
         google()
         jcenter()
