--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     // UI
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Navigation
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc01"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc01"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
 
     // RX Java
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
@@ -52,6 +52,9 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Google Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
